<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/red_wines"
            android:icon="@drawable/ic_wine_bottle"
            android:title="@string/red_wine" />
        <item
            android:id="@+id/white_wine"
            android:icon="@drawable/ic_wine_bottle"
            android:title="@string/white_wine" />
        <item
            android:id="@+id/varietals"
            android:icon="@drawable/ic_grapes"
            android:title="@string/varietal" />
        <item
            android:id="@+id/regions"
            android:icon="@drawable/ic_map"
            android:title="@string/region" />
        <item
            android:id="@+id/countries"
            android:icon="@drawable/ic_globe"
            android:title="@string/country" />
    </group>
</menu>
